# -SmolStep

./: OSM_test.ipynb  README.md  app.py  contact.html  index.html  init.py  main.py  map.html  maps.html  news.html  pyproject.toml  report.html  route.html  smolsteps.db  style.css  views.py
pages/: auth.py  dashboard.py  home copy.py  home.py  usage.py
service/: session.py
static/: style.css
static/css/: style.css
template/: contact.html  index.html  map.html  report.html  route.html
templates/: contact.html  index.html  map.html  maps.html  news.html  report.html  route.html
utils/: colors.py  config.py  db.py  gradient_colors.py  navbar.py  oauth.py  validation.py
