[tool.poetry]
name = "smolstep"
version = "0.1"
description = "Smolathon"
authors = ["labinf"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.11.0"
python-dotenv = "^1.0.0"
python3-utils = "^0.4.0"

[tool.poetry.group.dev.dependencies]
flet = "^0.11.0"
python-dotenv = "^1.0.0"
python3-utils = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
