[tool.poetry]
name = "smolstep"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.15.0"
networkx = "^3.2.1"
osmnx = "^1.7.1"
geopy = "^2.4.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
folium = "^0.15.0"
networkx = "^3.2.1"
osmnx = "^1.7.1"
geopy = "^2.4.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
